# pico-arduino

./: CMakeLists.txt
.CMake-Boilerplate/: INSTALLER.cmake  VARIABLES.cmake
Arduino/: CMakeLists.txt
Arduino/ArduinoCore-Pico/: PicoTone.h
scripts/: compile.sh  format.sh  get_dependencies.sh
